# Robot-moveit2-humble

./: README.md
Agilebot_Robot_Ros2/interface/: CMakeLists.txt  package.xml
Agilebot_Robot_Ros2/interface/srv/: SetInt16.srv
Agilebot_Robot_Ros2/my_robot_control/: CMakeLists.txt  package.xml
Agilebot_Robot_Ros2/my_robot_control/csv/: trajectory_001.csv
Agilebot_Robot_Ros2/my_robot_control/launch/: cartesian_controller.launch.py
Agilebot_Robot_Ros2/my_robot_control/scripts/: play_trajectory.py  record_trajectory.py
Agilebot_Robot_Ros2/my_robot_control/src/: cartesian_controller.cpp  incremental_controller.cpp
Agilebot_Robot_Ros2/scripts/: test_cartesian_ui.py
Agilebot_Robot_Ros2/scripts/robot_upper_computer/: .gitignore  README.md  main.py  requirements.txt  test.py
Agilebot_Robot_Ros2/scripts/robot_upper_computer/api/: __init__.py  moveit_api.py
Agilebot_Robot_Ros2/scripts/robot_upper_computer/configs/: robot_config.yaml  runtime_state.json  safety_config.yaml  users.yaml  work_object_config.yaml
Agilebot_Robot_Ros2/scripts/robot_upper_computer/core/: config_manager.py  data_models.py  robot_simulator.py
Agilebot_Robot_Ros2/scripts/robot_upper_computer/docs/: backend_interface_spec.md  openapi_backend.yaml  openapi_examples.md
Agilebot_Robot_Ros2/scripts/robot_upper_computer/ui/: main_window.py
Agilebot_Robot_Ros2/scripts/robot_upper_computer/ui/resources/styles/: default.qss
Agilebot_Robot_Ros2/scripts/robot_upper_computer/ui/widgets/: jog_panel.py  login_dialog.py  monitoring_panel.py  program_editor.py  robot_visualization.py  safety_config_dialog.py  tcp_config_dialog.py  user_management_dialog.py  work_object_config_dialog.py
